--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Cadastrar-se</h2>
-        <form action="/cadastro" method="POST">
+        <form action="/cadastrar" method="POST">
             <input type="text" name="name" placeholder="Nome Completo" required>
             <input type="email" name="email" placeholder="E-mail" required>
             <input type="password" name="password" placeholder="Senha" required>
