--- a/templates/home.html
+++ b/templates/home.html
@@ -12,12 +12,15 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="/informacoes">Sobre o PSQI</a></li>
+            <li><a href="/formulario">Faça o formulário!</a></li>
             <li><a href="#">Contato</a></li>
-            <li><a href="/teste">Faça aqui seu teste!</a></li>
+            <li><a href="/perfil">Perfil</a></li>
+            <li><a href="/historico">Histórico</a></li>
         </ul>
         <div class="auth-buttons">
             <a href="/login">Login</a>
             <a href="/cadastrar">Cadastro</a>
+            <a href="/logout" class="logout-button">Logout</a> <!-- Adicionando o botão de logout -->
         </div>
     </div>
 
@@ -39,6 +42,9 @@
 
         <h2>Por que o PSQI é importante?</h2>
         <p>O PSQI é utilizado em ambientes clínicos e de pesquisa para identificar distúrbios do sono e monitorar intervenções em indivíduos com problemas de sono. Ele fornece uma visão abrangente da qualidade do sono e pode ser uma ferramenta útil para profissionais de saúde.</p>
+
+        <!-- Adicionando o botão de logout na área de conteúdo -->
+
     </div>
 </body>
 </html>
