--- a/templates/informacoes.html
+++ b/templates/informacoes.html
@@ -13,7 +13,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/informacoes">Sobre o PSQI</a></li>
             <li><a href="#">Contato</a></li>
-            <li><a href="/teste">Faça aqui seu teste!</a></li>
+            <li><a href="/formulario">Faça aqui seu teste!</a></li>
         </ul>
         <div class="auth-buttons">
             <a href="/login">Login</a>
