--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -49,7 +49,7 @@
             <!-- Pontuação Global e Explicação -->
             <section class="scoring-explanation">
                 <h3>Pontuação Global</h3>
-                <p><strong>> 5 pontos:</strong> indica sono insatisfatório.</p>
+                <p><strong>Maior que 5 pontos:</strong> indica sono insatisfatório.</p>
                 <p><strong>Explicação:</strong> {{ explanation }}</p>
             </section>
         </div>
